fix(*): various bug fixes

--- a/documentation/scholarly.html
+++ b/documentation/scholarly.html
@@ -979,6 +979,7 @@ const handleDeleteReview = async () => {
       <h2>References</h2>
       <a href="http://goodreads.com">GoodReads</a><br />
       <a href="https://sass-lang.com/">SASS</a><br />
+      <a href="https://docbook.org/">DocBook Format</a><br />
       <a href="https://forkaweso.me/">Fork Awesome</a><br />
       <a href="http://meyerweb.com/eric/tools/css/reset/">CSS Reset</a><br />
     </section>
